profile layout bug fixed

--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -20,6 +20,10 @@
     grid-column: 1/2;
     justify-self: end;
 
+    @media screen and (max-width: 600px) {
+      justify-self: center;
+    }
+
     .image-placeholder {
       width: fit-content;
       height: auto;
@@ -40,6 +44,11 @@
 
   .nickname-introduction-container {
     grid-column: 2/3;
+
+    @media screen and (max-width: 600px) {
+      grid-column: 2/4;
+      grid-row: 1/2;
+    }
 
     .nickname {
       margin: 5px 0 8px 0;
@@ -65,15 +74,17 @@
   .controls-panel {
     grid-column: 3/4;
 
+    @media screen and (max-width: 600px) {
+      grid-column: 3/4;
+      grid-row: 2/3;
+      justify-self: center;
+    }
+
     .btn-container {
       width: 100%;
 
       &:first-child {
         margin-bottom: 10px;
-      }
-
-      @media screen and (max-width: 600px) {
-        text-align: center;
       }
     }
 
@@ -109,6 +120,12 @@
     grid-column: 1/2;
     justify-self: center;
 
+    @media screen and (max-width: 600px) {
+      grid-column: 1/3;
+      grid-row: 2/3;
+      justify-self: stretch;
+    }
+
     h3 {
       text-align: center;
       margin: 0 0 10px 0;
@@ -119,13 +136,6 @@
       grid-template-columns: 1fr 1fr;
       gap: 0.5em;
       margin-bottom: 10px;
-
-      @media screen and (max-width: 600px) {
-        grid-template-columns: 1fr;
-        text-align: center;
-        gap: 0.25em;
-        margin-bottom: 5px;
-      }
 
       span {
         font-weight: 400;
@@ -145,6 +155,11 @@
 
   .description-container {
     grid-column: 2/4;
+
+    @media screen and (max-width: 600px) {
+      grid-column: 1/4;
+      grid-row: 3/4;
+    }
 
     h3 {
       margin: 0 0 10px 0;
